// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip bottom center 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="cFYMGJ"
    color="text"
  >
    centered tooltip
  </div>
</div>
`;

exports[`Tooltip bottom left 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="YVKtg"
    color="text"
  >
    left tooltip
  </div>
</div>
`;

exports[`Tooltip bottom right 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="lmUsKA"
    color="text"
  >
    right tooltip
  </div>
</div>
`;

exports[`Tooltip renders 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="gSrMNz"
    color="text"
  >
    A Tooltip
  </div>
</div>
`;

exports[`Tooltip top center 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="dhMEgk"
    color="white"
  >
    centered tooltip
  </div>
</div>
`;

exports[`Tooltip top left 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="fWOYgi"
    color="white"
  >
    left tooltip
  </div>
</div>
`;

exports[`Tooltip top right 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="hAAhGB"
    color="white"
  >
    right tooltip
  </div>
</div>
`;
